@@ -1,5 +1,9 @@
 xdg-utils-cxx (1.0.1-3) UNRELEASED; urgency=medium
 
+  * Add patches provided by Assassin to fix issues with targets and
+    upstream uses of this library.
+    - Fix the SO version.
+    - Fix the install path to be in a searched lib path. 
 
  -- Scarlett Moore <sgmoore@kde.org>  Mon, 08 Feb 2021 12:52:39 -0700
 
